Added behaviours to buttons, working on ibm cloud logic

--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,9 @@
     <div class="container">
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-                <button class="btn btn-info" type="button" id="button-addon1">选择文件...</button>
+                <button class="btn btn-info" type="button" id="choose-file">选择文件...</button>
             </div>
-            <input type="text" class="form-control" placeholder="<--请点击左侧按钮选择音频文件，然后点击提交↓" readonly>
+            <input type="text" class="form-control" id="filename" placeholder="<--请点击左侧按钮选择音频文件，然后点击提交↓" readonly>
         </div>
         <div class="row justify-content-md-center">
             <button type="button" class="btn btn-info" id="submit">
@@ -38,4 +38,5 @@
             </button>
         </div>
     </div>
+    <script src="js/index.js"></script>
 </body>
