Added open-settings event and handler; Disable mainWin when any child window is opened.

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 <body>
     <div class="container">
         <div class="row justify-content-md-end" id="settings-div">
-            <button type="button" class="btn btn-outline-info">设置</button>
+            <button type="button" class="btn btn-outline-info" id="settings-btn">设置</button>
         </div>
         <div class="input-group mb-3" id="choose-file-div">
             <div class="input-group-prepend">
