--- a/app/settings.html
+++ b/app/settings.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+        <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css">
         <style>
             #cloud-provider-div {
                 margin-top: 10%;
@@ -75,8 +76,8 @@
                     </select>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12 text-center" id="notice-div">
+            <div class="row justify-content-center">
+                <div class="col-10 text-center" id="notice-div">
                     地区选择可以参考cloudping.info网站的测量结果
                 </div>
             </div>
