--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css">
     <style>
         /* body .container {
             margin-top: 25%
@@ -40,12 +41,20 @@
             background-color: gainsboro;
             opacity: 0.3;
         }
+
+        #dragndrop {
+            /* width: 100%; */
+            height: 200px;
+            margin-top: 20px;
+            background-color: gainsboro;
+            opacity: 0.3;
+        }
     
     </style>
 </head>
 <body>
     <div class="container">
-        <div id="overlay" hidden></div>
+        <div id="overlay" class="overlay" hidden></div>
         <div class="row justify-content-md-end" id="settings-div">
             <button type="button" class="btn btn-outline-info" id="settings-btn">设置</button>
         </div>
@@ -60,6 +69,11 @@
                 <span class="spinner-border spinner-border-sm" id="submit-spinner" role="status" aria-hidden="true" hidden></span>
                 <span id="submit-button-text">提交</span>
             </button>
+        </div>
+        <div id="dragndrop" class="row justify-content-md-center align-items-center">
+            <div id="dragndrop-text" class="text-center" style="font-size: 2em; user-select: none;">
+                或者将音频文件拖放到此区域
+            </div>
         </div>
     </div>
     <script src="js/index.js"></script>
