Modified text in setting window

--- a/app/settings.html
+++ b/app/settings.html
@@ -19,7 +19,7 @@
             
             #notice-div {
                 color: red;
-                margin-top: 10%;
+                margin-top: 5%;
             }
 
             #buttons-div {
@@ -78,7 +78,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-10 text-center" id="notice-div">
-                    地区选择可以参考cloudping.info网站的测量结果
+                    地区选择可以参考cloudping.info网站的测量结果<br>或者根据地理位置选择
                 </div>
             </div>
             <div class="row justify-content-center" id="buttons-div">
